--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Matthew LeDoux's Resume</title>
+    <title>Document</title>
 </head>
 
 <body>
@@ -24,14 +24,34 @@
             <h1>Career Objective</h1>
             <p class="careerparagraph">I am passionate about the creation of social networks that can effect social
                 change. I'm a junior developer who has just
-                finished the bootcamp portion of Epicodus Online Coding School. I've learned CSS, JavaScript,
+                finished the Epicodus Online Coding School. I've learned CSS, JavaScript,
                 jQuery,
                 React and C#/
                 Asp.NET Core with the MVC pattern. I'm dedicated to coding and I see myself doing this for the rest
                 of
-                my life. I will
-                begin the internship portion of my education very soon.
+                my life.
             </p>
+        </div>
+        <div id="experience">
+            <h1>Internships</h1>
+            <ul>
+                <li>
+                   <h4>Seagull Scientific</h4>
+                    <ul>
+                        <li>React</li>
+                        <li>Vue</li>
+                        <li>TypeScript</li>
+                    </ul>
+                </li>
+                <li>
+                    <h4> Behca llc</h4>
+                    <ul>
+                        <li>Complex Behavioral App</li>
+                        <li>CakePHP</li>
+                    </ul>
+                </li>
+            </ul> 
+     
         </div>
         <div id="contact">
             <h1>Contact</h1>
@@ -46,13 +66,7 @@
                         <path
                             d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
                     </svg>(971)303-7347</li>
-                <li> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-mailbox" viewBox="0 0 16 16">
-                        <path
-                            d="M4 4a3 3 0 0 0-3 3v6h6V7a3 3 0 0 0-3-3zm0-1h8a4 4 0 0 1 4 4v6a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V7a4 4 0 0 1 4-4zm2.646 1A3.99 3.99 0 0 1 8 7v6h7V7a3 3 0 0 0-3-3H6.646z" />
-                        <path
-                            d="M11.793 8.5H9v-1h5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.354-.146l-.853-.854zM5 7c0 .552-.448 0-1 0s-1 .552-1 0a1 1 0 0 1 2 0z" />
-                    </svg>920 NW Kearney St Portland, OR 97209</li>
+              
                 <li> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-linkedin" viewBox="0 0 16 16">
                         <path
@@ -65,6 +79,13 @@
                             d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
                     </svg>https://github.com/OkilyDokily
                 </li>
+                <li> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-mailbox" viewBox="0 0 16 16">
+                    <path
+                        d="M4 4a3 3 0 0 0-3 3v6h6V7a3 3 0 0 0-3-3zm0-1h8a4 4 0 0 1 4 4v6a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V7a4 4 0 0 1 4-4zm2.646 1A3.99 3.99 0 0 1 8 7v6h7V7a3 3 0 0 0-3-3H6.646z" />
+                    <path
+                        d="M11.793 8.5H9v-1h5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.354-.146l-.853-.854zM5 7c0 .552-.448 0-1 0s-1 .552-1 0a1 1 0 0 1 2 0z" />
+                </svg>Portland, OR</li>
             </ul>
         </div>
 
@@ -88,24 +109,25 @@
                 <li>Sql</li>
                 <li>Bootstrap</li>
                 <li>React</li>
+                <li>TypeScript</li>
                 <li>CSS</li>
-                <li>jQuery</li>
                 <li>Git</li>
                 <li>Blazor (Server Side)</li>
-                <li>Asp.NET MVC</li>
+                <li>Asp.NET MVC with C#</li>
+                <li>CakePHP</li>
             </ul>
         </div>
         <div id="certification">
             <h1 class="turquoise">Certification</h1>
             <h3>Epicodus Coding School</h3>
             <p class="certificationdetail">March 2020 - December 2021</p>
-            <p class="certificationdetail">Will receive certification upon completion of internship.</p>
+            <!-- <p class="certificationdetail">Will receive certification upon completion of internship.</p> -->
             <h1 class="turquoise">Projects</h1>
             <h3>Capstone</h3>
-            <p class="certificationdetail">Blazor Meetup, C#/Blazor</p>
+            <p class="certificationdetail"><a href="https://github.com/OkilyDokily/BlazorMeetup">Blazor Meetup, C#/Blazor</a></p>
             <h3>Other Projects</h3>
-            <p class="certificationdetail">TapRoom - React/Redux</p>
-            <p class="certificationdetail">Wikipedia Clone - Html/CSS</p>
+            <p class="certificationdetail"><a href="https://github.com/OkilyDokily/tap-room-redux">TapRoom - React/Redux</a></p>
+            <p class="certificationdetail"><a href="https://github.com/OkilyDokily/wikipedia">Wikipedia Clone - Html/CSS</a></p>
 
         </div>
 
